# rendercv

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  Dockerfile  John_Doe_CV.yaml  John_Doe_cover_letter.yaml  LICENSE  README.md  hatch_build.py  index.html  mkdocs.yaml  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run_rendercv.py  schema.json  setup.py  sitemap.xml  update_rendercv_files.py
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  FUNDING.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  feature_request.md  improvement_to_documentation.md
.github/workflows/: ci.yaml  deploy-docs.yaml  deploy-mkdocs.yaml  docker-image.yaml  publish-to-docker.yaml  publish-to-pypi.yaml  publish.yaml  python-tests.yml  test.yaml  tests.yaml  update-files.yaml
changelog/: index.html
docs/: CNAME  changelog.md  contact.md  developer_guide.md  generate_entry_figures.py  generate_entry_figures_and_examples.py  generate_entry_figures_and_examples_and_schema.py  index.md  schema.json  update_entry_figures.py  update_examples.py  update_rendercv_files.py  update_schema.py  user_guide.md
docs/api_reference/: __main__.md  data_model.md
docs/assets/javascripts/: katex.js
docs/assets/stylesheets/: rendercv.css
docs/code/: data_model.md  main.md  tinytex.md
docs/code_documentation/: index.md
docs/developer_guide/: faq.md  index.md  testing.md  writing_documentation.md
docs/documentation/: __main__.md  index.md  rendering.md
docs/reference/: cli.md  data_models.md  index.md  renderer.md  themes.md  tinytex.md
docs/reference/cli/: commands.md  index.md  printer.md  utilities.md
docs/reference/data/: generator.md  index.md  reader.md
docs/reference/renderer/: index.md  renderer.md  templater.md
docs/reference/themes/: classic.md  common_models.md  common_options.md  engineeringresumes.md  index.md  moderncv.md  sb2nov.md
docs/user_guide/: cli.md  faq.md  index.md  sample_entries.yaml  structure_of_the_yaml_input_file.md
examples/: John_Doe_CV.yaml  John_Doe_ClassicTheme_CV.yaml  John_Doe_EngineeringresumesTheme_CV.yaml  John_Doe_ModerncvTheme_CV.yaml  John_Doe_Sb2NovTheme_CV.yaml  John_Doe_Sb2novTheme_CV.yaml  README.md
overrides/partials/: toc-item.html
reference/: index.html
reference/cli/: index.html
reference/data_models/: index.html
reference/renderer/: index.html
reference/themes/: index.html
reference/themes/classic/: index.html
reference/themes/moderncv/: index.html
reference/themes/sb2nov/: index.html
rendercv/: __init__.py  __main__.py  babel-mapping.ini  cli.py  data_model.py  data_models.py  parser.py  rendercv.py  renderer.py  rendering.py  terminal_reporter.py  tinytex.py  translation.py  user_communicator.py  utilities.py
rendercv/cli/: __init__.py  cli.py  commands.py  handlers.py  printer.py  utilities.py  watcher.py
rendercv/data/: __init__.py  content.py  data_model.py  design.py  generator.py  reader.py  sample_content.yaml  sample_cover_letter.yaml
rendercv/data/models/: __init__.py  base.py  computers.py  curriculum_vitae.py  design.py  entry_types.py  locale_catalog.py  render.py  rendercv_data_model.py  rendercv_settings.py
rendercv/data_models/: __init__.py  complete_model.py  computed_fields.py  design_model.py  entry_validators.py  field_types.py  field_validators.py  generators.py  model_types.py  model_validators.py  models.py  types.py  utilities.py  validators.py
rendercv/locale/: .gitignore  messages.pot
rendercv/reader/: __init__.py  computed_fields.py  cv_model.py  entry_types.py  generators.py  locale_catalog_model.py  reader.py  sample_content.yaml
rendercv/reader/models/: __init__.py  computers.py  curriculum_vitae.py  design.py  entry_types.py  rendercv_data_model.py
rendercv/renderer/: __init__.py  renderer.py  templater.py  templating.py
rendercv/renderer/themes/: __init__.py  main.j2.html  main.j2.md
rendercv/templates/: classic.tex.j2  new_input.yaml.j2  template1.tex.j2
rendercv/templates/classic/: __init__.py  classic.tex.j2
rendercv/themes/: __init__.py  base_models.py  common_models.py  common_options.py  main.j2.html  main.j2.tex
rendercv/themes/classic/: BulletEntry.j2.tex  EducationEntry.j2.tex  ExperienceEntry.j2.tex  Header.j2.tex  NormalEntry.j2.tex  OneLineEntry.j2.tex  Preamble.j2.tex  PublicationEntry.j2.tex  TextEntry.j2.tex  __init__.py
rendercv/themes/engineering_coverletter/: BulletEntry.j2.tex  NormalEntry.j2.tex  Preamble.j2.tex  SectionBeginning.j2.tex  SectionEnding.j2.tex  TextEntry.j2.tex  __init__.py
rendercv/themes/engineeringresumes/: BulletEntry.j2.tex  EducationEntry.j2.tex  ExperienceEntry.j2.tex  Header.j2.tex  NormalEntry.j2.tex  OneLineEntry.j2.tex  Preamble.j2.tex  PublicationEntry.j2.tex  TextEntry.j2.tex  __init__.py
rendercv/themes/markdown/: ConsultingExperienceEntry.j2.md  EducationEntry.j2.md  ExperienceEntry.j2.md  Header.j2.md  NormalEntry.j2.md  OneLineEntry.j2.md  PublicationEntry.j2.md  SectionBeginning.j2.md  TextEntry.j2.md
rendercv/themes/mcdowell/: EducationEntry.j2.tex  ExperienceEntry.j2.tex  Header.j2.tex  NormalEntry.j2.tex  OneLineEntry.j2.tex  Preamble.j2.tex  PublicationEntry.j2.tex  SectionBeginning.j2.tex  SectionEnding.j2.tex  TextEntry.j2.tex  __init__.py  mcdowellcv.cls
rendercv/themes/moderncv/: BulletEntry.j2.tex  EducationEntry.j2.tex  Header.j2.tex  (+8 more)
rendercv/tinytex/: command.txt  render.py  test.tex
search/: search_index.json
tests/: conftest.py  test_cli.py  test_data.py  test_data_model.py  test_data_models.py  test_hatch_scripts.py  test_reader.py  test_rendercv.py  test_renderer.py  test_rendering.py  test_user_communicator.py
tests/inputs/: test.json
tests/outputs/: preamble.tex
tests/reference_files/: John_Doe_CV.tex  John_Doe_CV.yaml  John_Doe_CV_test.tex  John_Doe_CV_test.yaml  John_Doe_CV_tex_reference.tex  John_Doe_CV_yaml_reference.yaml  classic_theme_CV.tex  mcdowell_theme_CV.tex
tests/testdata/: John_Doe_CV.yaml  John_Doe_CV_design.yaml  John_Doe_CV_locale_catalog.yaml
user_guide/: index.html
(+169 files in other folders)
